--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <div class="row mb-5">
     <div class="col-md-12 col-xl-6 text-center mx-auto">
       <h2>Extractify</h2>
-      <p>Your one-stop KYC solution</p>
+      <p>AI-Powered Extraction. Simplified.</p>
       Enter API key : <input type="password" [(ngModel)]="key" />
     </div>
   </div>
@@ -347,7 +347,7 @@
               border-bottom-left-radius: 6px;
             " /><span style="transform: translate(4px)">Extractify</span>
         </div>
-        <p>Extracting and validating your KYC information from documents</p>
+        <p>Empowering businesses with AI-driven data extraction</p>
       </div>
       <!-- End: Extractify -->
     </div>
