--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
         <div class="px-3">
           <h4>PAN</h4>
           <p>Upload .pdf or .jpeg file</p>
-          <input type="file"
+          <input #panFile type="file"
                  style="
               padding-right: 0px;
               margin: 0;
@@ -87,7 +87,7 @@
         <div class="px-3">
           <h4>GST</h4>
           <p>Upload .pdf or .jpeg file</p>
-          <input type="file"
+          <input #gstFile type="file"
                  style="
               padding-right: 0px;
               margin: 0;
