--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -309,7 +309,7 @@
             <a href="https://github.com/wickedseer/ext" target="_blank">Github Repository</a>
           </li>
           <li>
-            <a href="" target="_blank">Demo Video</a>
+            <a href="https://user-images.githubusercontent.com/84715134/243170285-f3bb8e7c-43a6-4374-8737-43c5722c59e2.mp4" target="_blank">Demo Video</a>
           </li>
         </ul>
       </div>
